src/test/deca/codegen/invalid/NoInitFMoinsNoInit.deca
// Description:
//    soustraction sans initialisation
//
// Resultats:
//  Erreur
//
// Historique:
//    cree le 13/01/2017
{
int x;
float y;
print(y-x);
}
